--- a/css/base/core.css
+++ b/css/base/core.css
@@ -1,5 +1,6 @@
 :root {
   font-family: 'Quicksand', sans-serif;
+  font-weight: 300;
 }
 
 html,body {
@@ -7,9 +8,11 @@ html,body {
   margin: 0;
 }
 
-.center-large {
-  margin: 0 auto;
-  width: 1200px;
+@media (min-width: 920px) {
+  .center-medium {
+    margin: 0 auto;
+    width: 800px;
+  }  
 }
 
 .headline {
@@ -23,4 +26,15 @@ html,body {
 
 .headline:after {
   content: ']';
+}
+
+@media (min-width: 1304px) {
+  .center-large {
+    margin: 0 auto;
+    width: 1200px;
+  }
+}
+
+li {
+  list-style: none;
 }
